# AshLogin

./: Cargo.toml  README.md  RELEASING.md  RELEASING.zh-CN.md  config.toml.example
.github/workflows/: release.yml
packaging/homebrew-tap/: README.md
packaging/homebrew-tap/Formula/: ashlogin.rb
scripts/: update-homebrew-formula.sh
src/: config.rs  main.rs  ssh.rs  ui.rs
